--- a/catalog.haml
+++ b/catalog.haml
@@ -12,7 +12,7 @@
             = haml "/views/common/banners/_catalog".to_sym
           .m-b_3
             .grid
-              .grid-i.__grid-5
+              .grid-i.__grid-5.va-m
                 .p-l_2
                   %span.tx.__s.fw-600 Сортировать по:
                   %ul.sorting
@@ -22,6 +22,16 @@
                     %li.sorting_i
                       %a.a.__pseudo.__inner.sorting_i_a{href: "#"} 
                         %span Цене
+              .grid-i.__grid-4.va-m
+                .tx.__right
+                  %span.tx.__xxs Min
+                  .range{data: {min: 0, max: 100000, step: 1000}}
+                    .range_amount.__min.tx.__xxs
+                    .range_amount.__max.tx.__xxs
+                    .range_slider
+                    %input.range_input.__min{type: "hidden", value: "0", name: "min"}
+                    %input.range_input.__max{type: "hidden", value: "0", name: "max"}
+                  %span.tx.__xxs Max
           .layer.p-t_2.p-r_2.p-b_2.p-l_2
             #feed
               = haml "/views/common/catalog/_feed".to_sym
