--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -1280,6 +1280,52 @@
       }
     }
 
+//
+// .. Range
+//
+.range {
+  width: 190px;
+  display: inline-block;
+  padding: 0 15px;
+  position: relative;
+}
+  .range_amount {
+    position: absolute;
+    top: -25px;
+    &.__min {
+      left: 20px;
+    }
+    &.__max {
+      right: 20px;
+    }
+  }
+    .range_slider {
+      background-color: #d8d8d9;
+      box-shadow: inset 0 0 1px 0 #c3c3c4;
+      @include prefixes(box-sizing, border-box);    
+      border-top: 1px solid #aeaeae;
+      border-radius: 3px;
+      height: 8px;
+      position: relative;
+      .ui-slider-range {
+        border-top: 1px solid #fbd8e4;
+        background-color: #e62163;
+        height: 100%;
+        position: absolute;
+      }
+      .ui-slider-handle {
+        background-color: #fbfbfb;
+        border: 1px solid #ddd;
+        width: 10px;
+        height: 17px;
+        position: absolute;
+        margin: {
+          top: -6px;
+          left: -6px;
+        }
+      }
+    }
+
 
 
 //****************************************************************************************************
