--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -1326,6 +1326,17 @@
       }
     }
 
+//
+// .. Tags
+//    
+.tags {
+
+}
+  .tags_i {
+    display: inline-block;
+    &:not(:last-child) {margin-right: 15px;}    
+  }
+
 
 
 //****************************************************************************************************
