--- a/views/common/item/_item_order.haml
+++ b/views/common/item/_item_order.haml
@@ -1,11 +1,19 @@
 - hash = rand(9999)
 %article.item.__badge.__order
-  %header.item_name
+  %header.item_brand
     %a{href: "/catalog_show#{hash}"} Dance legend
   .item_photo
     %a{href: "/catalog_show#{hash}"}
       %img.va-t{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", width: 130, height: 120, alt: "Лак для ногтей c растрескивающимся эффектом Crack"}
   .item_caption
     %a{href: "/catalog_show#{hash}"} Лак для ногтей c&nbsp;растрескивающимся эффектом Crack
+  .item_like
+    .item_like_i
+      .item_like_raty
+    .item_like_i
+      %a{href: "#"}
+        %i.ico.__20.__like
+  .item_more 
+    %a{href: "/catalog_show#{hash}"} Подробнее
   %footer.item_price
     .item_price_new.format-money.__rub 131000
