--- a/views/layouts/_head.haml
+++ b/views/layouts/_head.haml
@@ -29,6 +29,7 @@
 %script{src: "/assets/javascripts/vendor/imagesloaded.pkgd.min.js"}
 %script{src: "/assets/javascripts/vendor/masonry.pkgd.min.js"}
 %script{src: "/assets/javascripts/vendor/accounting.min.js"}
+%script{src: "/assets/javascripts/vendor/jquery.raty.min.js"}
 %script{src: "/assets/javascripts/jquery.extensions.js"}
 %script{src: "/assets/javascripts/forms.js"}
 %script{src: "/assets/javascripts/components.js"}
