--- a/views/common/item/_item_new.haml
+++ b/views/common/item/_item_new.haml
@@ -1,12 +1,11 @@
-- hash = rand(9999)
 %article.item.__badge.__new
   %header.item_brand
-    %a{href: "/catalog_show#{hash}"} Relouis
+    %a{href: "/brand_show"} Relouis
   .item_photo
-    %a{href: "/catalog_show#{hash}"}
+    %a{href: "/catalog_show"}
       %img.va-t{src: "/assets/images/fake/item_#{rand(1..9)}.jpg", width: 130, height: 120, alt: "Микронизированные компактные румяна La Mia Italia"}
   .item_caption
-    %a{href: "/catalog_show#{hash}"} Микронизированные компактные румяна La Mia Italia
+    %a{href: "/catalog_show"} Микронизированные компактные румяна La Mia Italia
   .item_like
     .item_like_i
       .item_like_raty
@@ -14,7 +13,7 @@
       %a{href: "#"}
         %i.ico.__20.__like
   .item_more 
-    %a{href: "/catalog_show#{hash}"} Подробнее
+    %a{href: "/catalog_show"} Подробнее
   %footer.item_price
     .item_price_old.format-money.__rub 32000
     .item_price_new.format-money.__rub 17000
