--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -5,7 +5,7 @@
       .grid
         .grid-i.__grid-2
           %nav.m-b_2
-            %h3.tx.__upper Как заказать
+            %h3.tx.__upper.m-b_1 Как заказать
             %ul
               %li
                 %a{href: "#"} О магазине
@@ -18,7 +18,7 @@
               %li
                 %a{href: "#"} Изменения в заказе
           %nav
-            %h3.tx.__upper Информация
+            %h3.tx.__upper.m-b_1 Информация
             %ul
               %li
                 %a{href: "#"} Поставщикам
@@ -28,7 +28,7 @@
                 %a{href: "#"} Использование информации
         .grid-i.__grid-7
           .footer_payment.m-b_3
-            %h3.tx.__upper Мы принимаем к оплате
+            %h3.tx.__upper.m-b_1 Мы принимаем к оплате
             %nav
               .d-ib.va-m
                 .footer_payment_i.__cash
@@ -50,7 +50,7 @@
                   %a{href: "#"}
                     %i.sprites.__payment.__ep
           .footer_partnerships
-            %h3.tx.__upper Наши партнеры
+            %h3.tx.__upper.m-b_1 Наши партнеры
             %nav
               .footer_partnerships_i
                 %a{href: "#"}
